--- a/weather.css
+++ b/weather.css
@@ -5,7 +5,8 @@ body {
     margin: 0;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-repeat: no-repeat;    
+    background-repeat: no-repeat; 
+    background-color: #80dfff;   
 }
 img {
     width: 40px;
